--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,21 @@ footer {
         font-size: 1.5rem;
     }
 
+    .card-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+
+    .service-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
     .why-card,
     .about-content {
         flex-direction: column;
